<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_match"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/polo_p"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.toreki.scorekeeper.MatchActivity">

    <!-- reset -->
    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="resetScore"
        android:text="@string/button_reset" />

    <!-- Teams -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_reset"
        android:orientation="horizontal"
        android:padding="8dp">

        <!-- Team A -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- name -->
            <TextView
                android:id="@+id/team_a_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:text="@string/team_a_name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <!-- goal -->
            <TextView
                android:id="@+id/team_a_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp" />


            <!-- offside -->
            <TextView
                android:id="@+id/team_a_offside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="4dp"
                android:text="offside: 0"
                android:textColor="#000000"
                android:textSize="24sp" />

            <!-- goal button -->
            <Button
                android:id="@+id/button_a_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addGoalA"
                android:padding="8dp"
                android:text="@string/goal" />

            <!-- offside button -->
            <Button
                android:id="@+id/button_a_offside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addOffsideA"
                android:text="@string/offside" />

        </LinearLayout>

        <!-- Center line -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"></View>

        <!-- Team B -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- name -->
            <TextView
                android:id="@+id/team_b_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:text="@string/team_b_name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />


            <!-- goal -->
            <TextView
                android:id="@+id/team_b_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp" />

            <!-- offside -->
            <TextView
                android:id="@+id/team_b_offside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="4dp"
                android:text="offside: 0"
                android:textColor="#000000"
                android:textSize="24sp" />
            <!-- goal button -->
            <Button
                android:id="@+id/button_b_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addGoalB"
                android:text="@string/goal" />

            <!-- offside button -->
            <Button
                android:id="@+id/button_b_offside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addOffsideB"
                android:text="@string/offside" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
